--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -3,6 +3,27 @@
 	<table class="ui table">
 		<thead>
 			<tr><th colspan="2">
+				Location<button class="ui right floated basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i></button>
+			</th>
+		</tr></thead>
+		<tbody>
+			<tr>
+				<td class="collapsing">
+					Country
+				</td>
+				<td>{{model.country}}</td>
+			</tr>
+			<tr>
+				<td>
+					Region
+				</td>
+				<td>{{model.region}}</td>
+			</tr>
+		</tbody>
+	</table>
+	<table class="ui table">
+		<thead>
+			<tr><th colspan="2">
 				Data<button class="ui right floated basic icon button mini" onClick={{action "editField" "data"}}><i class="icon edit"></i></button>
 			</th>
 		</tr></thead>
