fix split-function bug

--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -75,7 +75,7 @@
                         <div class="ui segment">
                             <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePrefixNumber" "Remove prefix street"}}>Remove prefix number</button>
                             <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePostfixStreet" "Remove postfix street"}}>Remove postfix street</button>
-                            <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removeDuplicateValue"}}>Remove value found an another column</button>
+                            <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removeDuplicateValue" "text remove extract"}}>Remove value found an another column</button>
                         </div>
                       </div>
                     {{/if}}
