--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -22,7 +22,7 @@
   <table class="ui table">
     <thead>
       <tr><th colspan="2">
-        Data<button class="ui right floated basic icon button mini" onClick={{action "editField" "data"}}><i class="icon edit"></i></button>
+        Data information<button class="ui right floated basic icon button mini" onClick={{action "editField" "data"}}><i class="icon edit"></i></button>
       </th>
     </tr></thead>
     <tbody>
