adding progress steps to application header box; styling in css

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,16 @@
 <div class="ui inverted vertical masthead center aligned segment teal">
-	<div class="ui text container">
-		<h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
-		<h2>subtitle text here</h2>
-	</div>
-	<div class="ui vertical stripe segment"></div>
+    <div class="ui text container">
+        <h1 class="ui inverted header">Mobility-on-Demand Sandbox</h1>
+        <h2>subtitle text here</h2>
+    </div>
+    <div class="ui vertical stripe segment"></div>
+    <nav class="progress">
+        <ul>
+            <li class="steps active"> Step 1 </li>
+            <li class="steps"> Step 2 </li>
+            <li class="steps"> Step 3 </li>
+            <li class="steps"> Step 4 </li>
+        </ul>
+    </nav>
 </div>
 {{outlet}}
