preview action value as well

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -101,6 +101,14 @@
               <td>Column{{#if (gt properties.columns 1)}}s{{/if}}</td>
               <td>{{properties.columns}}</td>
             </tr>
+            {{#if properties.action}}
+              <tr>
+                <td>Function</td>
+                <td>
+                  {{properties.action}}
+                </td>
+              </tr>
+            {{/if}}
             {{#if properties.extractionFunction}}
               <tr>
                 <td>Extraction function</td>
