improve column field in review page

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -98,7 +98,7 @@
               <td>{{field}}</td>
             </tr>
             <tr>
-              <td>Column{{#if (gt properties.columns 1)}}s{{/if}}</td>
+              <td>Column(s)</td>
               <td>{{properties.columns}}</td>
             </tr>
             {{#if properties.action}}
