formatting progress header

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,7 +6,8 @@
 }
 
 .ui.inverted.vertical.masthead.center.aligned.segment.teal {
-	padding-bottom: 0px
+	padding-bottom: 0px;
+	margin-bottom: 30px;
 }
 
 h1 {
