--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,7 @@
     <div class="ui vertical stripe segment"></div>
     <nav class="progress">
         <ul>
-            <li class="steps active"> Step 1 </li>
+            <li class="steps"> Step 1 </li>
             <li class="steps"> Step 2 </li>
             <li class="steps"> Step 3 </li>
             <li class="steps"> Step 4 </li>
