add forwardButtonText property to nav-button component, so Next button can be changed to Review for the step before reivew

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -20,6 +20,6 @@
 					showErrorState=showErrorState}}
 			</div>
 		</div>
-		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" changeset=changeset}}
+		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" forwardButtonText="Review" changeset=changeset}}
 	{{/with}}
 </div>
