destroy data route, update review page, update intro page next button link

--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -25,5 +25,5 @@
     {{/power-select}}
   {{/if}}
  
-  {{nav-buttons sendChangeRoute="changeRoute" next="data"}}
+  {{nav-buttons sendChangeRoute="changeRoute" next="source"}}
 </div>
