--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -24,7 +24,7 @@
 	<table class="ui table">
 		<thead>
 			<tr><th colspan="2">
-				Data<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i>Edit</button>
+				Data<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "data"}}><i class="icon edit"></i>Edit</button>
 			</th>
 		</tr></thead>
 		<tbody>
@@ -45,7 +45,7 @@
 	<table class="ui table">
 		<thead>
 			<tr><th colspan="2">
-				Source<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i>Edit</button>
+				Source<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "source"}}><i class="icon edit"></i>Edit</button>
 			</th>
 		</tr></thead>
 		<tbody>
@@ -67,7 +67,7 @@
 		<thead>
 			<tr>
 				<th colspan="2">
-					License<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i>Edit</button>
+					License<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "license"}}><i class="icon edit"></i>Edit</button>
 				</th>
 			</tr>
 		</thead>
@@ -87,7 +87,7 @@
 		</tbody>
 	</table>
   <div class="ui segment">
-    <h3 class="ui floated header">Column mapping</h3><button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i>Edit</button>
+    <h3 class="ui floated header">Column mapping</h3><button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "mapping"}}><i class="icon edit"></i>Edit</button>
     <div class="ui clearing divider"></div>
     {{#each-in model.oaFields as |field properties|}}
       {{#if properties.columns}}
@@ -137,7 +137,7 @@
 	<table class="ui table">
 		<thead>
 			<tr>
-				<th colspan="2">Maintainer contact information<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "intro"}}><i class="icon edit"></i>Edit</button></th>
+				<th colspan="2">Maintainer contact information<button class="review ui right floated labeled blue basic icon button mini" onClick={{action "editField" "contact"}}><i class="icon edit"></i>Edit</button></th>
 			</tr>
 		</thead>
 		<tbody>
