--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,19 +6,19 @@
 	<div class="ui vertical stripe segment"></div>
   <nav class="progress">
     <ul>
-      {{#link-to 'intro' tagName="li" href=false}}
+      {{#link-to 'intro' tagName="li" disabled=true}}
         Feed
       {{/link-to}}
-      {{#link-to 'data' tagName="li" href=false}}
+      {{#link-to 'data' tagName="li" disabled=true}}
         More Info
       {{/link-to}}
-      {{#link-to 'mapping' tagName="li" href=false}}
+      {{#link-to 'mapping' tagName="li" disabled=true}}
         Column Mapping
       {{/link-to}}
-      {{#link-to 'contact' tagName="li" href=false}}
+      {{#link-to 'contact' tagName="li" disabled=true}}
         Contact Info
       {{/link-to}}
-      {{#link-to 'review' tagName="li" href=false}}
+      {{#link-to 'review' tagName="li" disabled=true}}
         Review
       {{/link-to}}
     </ul>
