add ui to frequency update

--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -52,13 +52,27 @@
       </div>
       {{#if (eq model.attribution true)}}
         <div class="field">
-          <label>Attribution</label>
+          <label>Enter text for attribution</label>
           <input type="text" onInput={{action "setAttributionText"}}>
         </div>
       {{/if}}
     {{/if}}
     <div class="field">
       <h4 class="ui dividing header">Data information</h4>
+      <div class="field">
+        <label>Frequency of update</label>
+        {{#ui-dropdown class="selection" selected=model.license onChange=(action "setFrequency") as | execute mapper|}}
+          <div class="default text">Frequency</div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            {{#each frequencies as | frequency |}}
+              <div class="item" data-value={{map-value mapper frequency}}>
+                {{frequency}}
+              </div>
+            {{/each}}
+          </div>
+        {{/ui-dropdown}}
+      </div>
     </div>
   </div>
  
