start cleaning up review page wrt more-info changes

--- a/app/templates/more-info.hbs
+++ b/app/templates/more-info.hbs
@@ -73,6 +73,10 @@
           </div>
         {{/ui-dropdown}}
       </div>
+      <div class="field">
+          <label>Who provided the data?</label>
+          <input type="text" onInput={{action "setSource"}}>
+        </div>
     </div>
   </div>
  
