--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
   <nav class="progress">
     <ul>
       <li class={{if (eq currentRouteName 'intro') "active"}}> Feed </li>
-      <li class={{if (eq currentRouteName 'data') "active"}}> More Info </li>
+      <li class={{if (eq currentRouteName 'more-info') "active"}}> More Info </li>
       <li class={{if (eq currentRouteName 'mapping') "active"}}> Column Mapping </li>
       <li class={{if (eq currentRouteName 'contact') "active"}}> Contact Info </li>
       <li class={{if (eq currentRouteName 'review') "active"}}> Review </li>
