--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -157,7 +157,7 @@
 	</table>
   <button class="ui button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
 	<button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
-  {{#ui-modal name="profile" class="review-cancel" onApprove=(action "approveModal") onDeny=(action 'denyModal')}}
+  {{#ui-modal name="review-cancel" class="review-cancel" onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
     <i class="close icon"></i>
     <div class="header">
       Cancel Submission
