--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -157,6 +157,7 @@
 	</table>
   <button class="ui button red left floated" onClick={{action "openModal" "review-cancel"}}>Cancel</button>
 	<button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
+
   {{#ui-modal name="review-cancel" class="review-cancel" onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
     <i class="close icon"></i>
     <div class="header">
@@ -164,7 +165,7 @@
     </div>
     <div class="content">
       <div class="description">
-        <p>Are you sure you want to start over? </p>
+        <p>Are you sure you want to start over? All changes made will be erased. </p>
       </div>
     </div>
     <div class="actions">
