--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -84,27 +84,31 @@
       </tr>
     </tbody>
   </table>
-  <table class="ui table">
-    <thead>
-      <tr>
-        <th colspan="2">Maintainer contact information<button class="ui right floated basic icon button mini" onClick={{action "editField" "contact"}}><i class="icon edit"></i></button></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          Name
-        </td>
-        <td>{{#if model.maintainer_name}}{{model.maintainer_name}}{{else}}<i>not provided</i>{{/if}}</td>
-      </tr>
-      <tr>
-        <td>
-          Email
-        </td>
-        <td>{{model.maintainer_email}}</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="ui segment">
+    <h3 class="ui floated header">Maintainer contact information</h3><i class="icon edit" onClick={{action "editField" "contact"}}></i>
+    <div class="ui clearing divider"></div>
+    <div class="ui five column grid">
+      <div class="row">
+        <div class="two wide column">
+          Email 
+        </div>
+        <div class="fluid column">
+          {{model.maintainer_email}}
+        </div>
+      </div>
+      {{#if model.maintainer_name}}
+        <div class="ui section divider"></div>
+        <div class="row">
+          <div class="two wide column">
+            Name
+          </div>
+          <div class="fluid column">
+            {{model.maintainer_name}}
+          </div>
+        </div>
+      {{/if}}
+    </div>
+  </div>
   <div class="ui segment">
     <h3 class="ui floated header">Column mapping</h3><i class="icon edit" onClick={{action "editField" "mapping"}}></i>
     <div class="ui clearing divider"></div>
