--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -1,89 +1,21 @@
 <div class="ui text container">
   <h3 class="first headroom">Review</h3>
-  <table class="ui table">
-    <thead>
-      <tr><th colspan="2">
-        Data
-      </th>
-    </tr></thead>
-    <tbody>
-      <tr>
-        <td class="collapsing">
+   <div class="ui segment">
+    <h3 class="ui floated header">Data</h3><i class="icon edit" onClick={{action "editField" "contact"}}></i>
+    <div class="ui clearing divider"></div>
+    <div class="ui five column grid">
+      <div class="row">
+        <div class="two wide column">
           {{#if model.data_url}}Link to data{{/if}}
-          {{#if model.data_file}}Data upload file name{{/if}}
-        </td>
-        <td>
+          {{#if model.data_file}}Data upload file name{{/if}} 
+        </div>
+        <div class="fluid column">
           {{#if model.data_url}}{{model.data_url}}{{/if}}
           {{#if model.data_file}}{{model.data_file.name}}{{/if}}
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="ui table">
-    <thead>
-      <tr><th colspan="2">
-        Data information<button class="ui right floated basic icon button mini" onClick={{action "editField" "data"}}><i class="icon edit"></i></button>
-      </th>
-    </tr></thead>
-    <tbody>
-      <tr>
-        <td class="collapsing">
-          Data type
-        </td>
-        <td>{{model.data_type}}</td>
-      </tr>
-      <tr>
-        <td>
-          Data link
-        </td>
-        <td>{{model.data_link}}</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="ui table">
-    <thead>
-      <tr><th colspan="2">
-        Source<button class="ui right floated basic icon button mini" onClick={{action "editField" "source"}}><i class="icon edit"></i></button>
-      </th>
-    </tr></thead>
-    <tbody>
-      <tr>
-        <td>
-          Source name
-        </td>
-        <td>{{model.source_name}}</td>
-      </tr>
-      <tr>
-        <td>
-          Update frequency
-        </td>
-        <td>{{model.update_frequency}}</td>
-      </tr>
-    </tbody>
-  </table>
-  <table class="ui table">
-    <thead>
-      <tr>
-        <th colspan="2">
-          License<button class="ui right floated basic icon button mini" onClick={{action "editField" "license"}}><i class="icon edit"></i></button>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>
-          License name
-        </td>
-        <td>{{model.license.name}}</td>
-      </tr>
-       <tr>
-        <td>
-          License text
-        </td>
-        <td>{{model.license.text}}</td>
-      </tr>
-    </tbody>
-  </table>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="ui segment">
     <h3 class="ui floated header">Maintainer contact information</h3><i class="icon edit" onClick={{action "editField" "contact"}}></i>
     <div class="ui clearing divider"></div>
