column mapping progress tab wasn't reacting when on mapping page; changed to (eq 'mapping.index')

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
     <ul>
       <li class={{if (eq currentRouteName 'intro') "active"}}> Feed </li>
       <li class={{if (eq currentRouteName 'more-info') "active"}}> More Info </li>
-      <li class={{if (eq currentRouteName 'mapping') "active"}}> Column Mapping </li>
+      <li class={{if (eq currentRouteName 'mapping.index') "active"}}> Column Mapping </li>
       <li class={{if (eq currentRouteName 'contact') "active"}}> Contact Info </li>
       <li class={{if (eq currentRouteName 'review') "active"}}> Review </li>
     </ul>
