--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -144,5 +144,5 @@
 
     {{/if}}
   {{/each-in}}
-  {{nav-buttons sendChangeRoute="changeRoute" back="license" next="contact"}}
+  {{nav-buttons sendChangeRoute="changeRoute" back="license" next="data-format"}}
 </div>
