--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -4,11 +4,7 @@
     <thead>
       <tr>
         {{#each-in model.submission.oaFields as |field properties|}}
-          {{#if (not properties.columns)}}
             <th>{{field}}</th>
-          {{else}}
-            <th><a onClick={{action "goToField" field}} class={{if (not-eq currentField field) "inactiveField"}}>{{field}}</a></th>
-          {{/if}}
         {{/each-in}}
       </tr>
     </thead>
@@ -22,4 +18,24 @@
       {{/each-in}}
     </tbody>
   </table>
+  {{#each-in model.submission.oaFields as |field properties|}}
+    <form class="ui form segment">
+      <label>{{field}}</label>
+      <div class="ui stackable three column center aligned grid">
+        {{#ui-dropdown class="selection fluid" onChange=(action "chooseColumn" field) as |execute mapper|}}
+          <div class="default text">
+              Source column headings
+          </div>
+          <i class="dropdown icon"></i>
+          <div class="menu">
+            {{#each columnHeadings as |heading|}}
+              <div class="item" data-value="{{map-value mapper heading}}">
+                {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
+              </div>
+            {{/each}}
+          </div>
+        {{/ui-dropdown}}
+      </div>
+    </form>
+  {{/each-in}}
 </div>
